syntax = "proto3";

package scontract.points.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "scontract/points/v1/params.proto";
import "scontract/points/v1/point_balance.proto";
import "scontract/points/v1/settlement.proto";
import "scontract/points/v1/transaction.proto";

option go_package = "scontract/x/points/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/scontract/points/v1/params";
  }

  // ListPointBalance Queries a list of PointBalance items.
  rpc GetPointBalance(QueryGetPointBalanceRequest) returns (QueryGetPointBalanceResponse) {
    option (google.api.http).get = "/scontract/points/v1/point_balance/{index}";
  }

  // ListPointBalance defines the ListPointBalance RPC.
  rpc ListPointBalance(QueryAllPointBalanceRequest) returns (QueryAllPointBalanceResponse) {
    option (google.api.http).get = "/scontract/points/v1/point_balance";
  }

  // ListTransaction Queries a list of Transaction items.
  rpc GetTransaction(QueryGetTransactionRequest) returns (QueryGetTransactionResponse) {
    option (google.api.http).get = "/scontract/points/v1/transaction/{id}";
  }

  // ListTransaction defines the ListTransaction RPC.
  rpc ListTransaction(QueryAllTransactionRequest) returns (QueryAllTransactionResponse) {
    option (google.api.http).get = "/scontract/points/v1/transaction";
  }

  // ListSettlement Queries a list of Settlement items.
  rpc GetSettlement(QueryGetSettlementRequest) returns (QueryGetSettlementResponse) {
    option (google.api.http).get = "/scontract/points/v1/settlement/{id}";
  }

  // ListSettlement defines the ListSettlement RPC.
  rpc ListSettlement(QueryAllSettlementRequest) returns (QueryAllSettlementResponse) {
    option (google.api.http).get = "/scontract/points/v1/settlement";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetPointBalanceRequest defines the QueryGetPointBalanceRequest message.
message QueryGetPointBalanceRequest {
  string index = 1;
}

// QueryGetPointBalanceResponse defines the QueryGetPointBalanceResponse message.
message QueryGetPointBalanceResponse {
  PointBalance point_balance = 1 [(gogoproto.nullable) = false];
}

// QueryAllPointBalanceRequest defines the QueryAllPointBalanceRequest message.
message QueryAllPointBalanceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllPointBalanceResponse defines the QueryAllPointBalanceResponse message.
message QueryAllPointBalanceResponse {
  repeated PointBalance point_balance = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetTransactionRequest defines the QueryGetTransactionRequest message.
message QueryGetTransactionRequest {
  uint64 id = 1;
}

// QueryGetTransactionResponse defines the QueryGetTransactionResponse message.
message QueryGetTransactionResponse {
  Transaction transaction = 1 [(gogoproto.nullable) = false];
}

// QueryAllTransactionRequest defines the QueryAllTransactionRequest message.
message QueryAllTransactionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllTransactionResponse defines the QueryAllTransactionResponse message.
message QueryAllTransactionResponse {
  repeated Transaction transaction = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetSettlementRequest defines the QueryGetSettlementRequest message.
message QueryGetSettlementRequest {
  uint64 id = 1;
}

// QueryGetSettlementResponse defines the QueryGetSettlementResponse message.
message QueryGetSettlementResponse {
  Settlement settlement = 1 [(gogoproto.nullable) = false];
}

// QueryAllSettlementRequest defines the QueryAllSettlementRequest message.
message QueryAllSettlementRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllSettlementResponse defines the QueryAllSettlementResponse message.
message QueryAllSettlementResponse {
  repeated Settlement settlement = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
